# fantano_recommendations

./: pyproject.toml
descriptions/: GREAT ALBUMS: APRIL 2016.txt  GREAT ALBUMS: AUGUST 2015.txt  GREAT ALBUMS: April 2017.txt  GREAT ALBUMS: April 2018.txt  GREAT ALBUMS: April 2019.txt  GREAT ALBUMS: August 2017.txt  GREAT ALBUMS: FEB 2016.txt  GREAT ALBUMS: February 2017.txt  GREAT ALBUMS: February 2018.txt  GREAT ALBUMS: February 2020.txt  GREAT ALBUMS: JAN 2016.txt  GREAT ALBUMS: JULY 2015.txt  GREAT ALBUMS: JULY 2016.txt  GREAT ALBUMS: JULY 2017.txt  GREAT ALBUMS: January & February 2019.txt  GREAT ALBUMS: January 2017.txt  GREAT ALBUMS: July (+ August so far) 2018.txt  GREAT ALBUMS: July 2019.txt  GREAT ALBUMS: July 2020.txt  GREAT ALBUMS: June 2020.txt  GREAT ALBUMS: MARCH 2016.txt  GREAT ALBUMS: MAY 2016.txt  GREAT ALBUMS: March 2017.txt  GREAT ALBUMS: March 2018.txt  GREAT ALBUMS: March 2019.txt  GREAT ALBUMS: March—May 2020.txt  GREAT ALBUMS: May 2017.txt  GREAT ALBUMS: May 2019.txt  GREAT ALBUMS: NOVEMBER 2015.txt  GREAT ALBUMS: NOVEMBER 2016.txt  GREAT ALBUMS: October 2016.txt  GREAT ALBUMS: October 2017.txt  GREAT ALBUMS: October 2018.txt  GREAT ALBUMS: October 2019.txt  GREAT ALBUMS: September 2016.txt  GREAT ALBUMS: September 2017.txt  GREAT ALBUMS: September 2018.txt  GREAT ALBUMS: September 2019.txt  Great Albums: April 2015.txt  Great Albums: August 2016.txt  (+4 more)
src/: main.py
